<resources xmlns:android="http://schemas.android.com/apk/res/android" xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">OTTSettings</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="pageName_settings_net_status">网络状态</string>
    <string name="pageName_settings_wired">有线网络</string>
    <string name="pageName_settings_wifi">无线网络</string>
    <string name="pageName_settings_wifi_hotspot">Wi-Fi热点</string>
    <string name="pageName_settings_audio">音频设置</string>
    <string name="pageName_settings_vedio">视频设置</string>
    <string name="pageName_settings_showAdjust">显示调整</string>
    <string name="pageName_settings_sysUpgrade">系统升级</string>
    <string name="pageName_settings_appManager">应用管理</string>
    <string name="pageName_settings_help">用户须知</string>
    <string name="pageName_settings_about">关于</string>
    <string name="page_net_status_internet">网络</string>
    <string name="page_net_status">不可用</string>
    <string name="page_net_status_IP">IP地址：</string>
    <string name="page_net_status_MAC">MAC地址：</string>
    <string name="page_net_status_childNet">子网掩码：</string>
    <string name="page_net_status_familyNet">网关：</string>
    <string name="page_net_status_DNS">DNS：</string>
    <string name="page_net_status_wifi_net">无线网络</string>
    <string name="page_net_status_wired_net">有线网络</string>
    <string name="page_net_status_connected">已连接</string>
    <string name="page_wired_internet_style">网络配置方式</string>
    <string name="page_wired_autoGet">网络自动获取</string>
    <string name="page_wired_manualSet">网络手动设置</string>
    <string name="page_wired_begin">确定</string>
    <string name="page_wired_finish">完成</string>
    <string name="page_wired_check">使用前请检查网线是否正常连接</string>
    <string name="page_wired_ethernet_setup_title">有线网卡设置</string>
    <string name="page_wired_eth_con_type_dhcp">动态IP</string>
    <string name="page_wired_eth_con_type_manual">静态IP</string>
	<string name="page_wired_network_connected">已连接</string>
	<string name="page_wired_eth_ipaddr">IP</string>
	<string name="page_wired_eth_mask">子网掩码</string>
	<string name="page_wired_eth_gw">网关</string>
	<string name="page_wired_eth_dns">DNS</string>
    <string name="page_wired_eth_backup_dns">备用DNS</string>
    <string name="page_wired_eth_settings_error">设置失败：请输入有效的字符 0~255</string>
    <string name="network_channel_cable">有线网</string>
    <string name="network_status_title">网络状态</string>
    <string name="network_status_waiting">正在配置网络，请稍候...</string>
	<string name="ethernet_status_waiting">正在配置有线网络，请稍候...</string>
	<string name="wifi_status_waiting">正在配置无线网络，请稍候...</string>
	<string name="network_setup_success">配置成功</string>
	<string name="network_setup_failed">配置失败，请检查网络</string>
	<string name="network_channel_wireless">无线网</string>
    <string name="button_text_next">下一步</string>
    <string name="button_text_previous">上一步</string>
    <string name="button_text_finish">完成</string>
    <string name="button_text_confirm">确定</string>
    <string name="button_text_wifi_not_save">不保存</string>
    <string name="button_text_wifi_connect">连接</string>
    <string name="network_wifi_switch_statu">当前状态：</string>
    <string name="network_wifi_switch_isClose">关</string>
    <string name="network_wifi_switch_isOpen">开</string>
    <string name="network_wifi_setup_1">网卡模式</string>
    <string name="network_wifi_setup_2">AP模式</string>
    <string name="network_wifi_setup_title">无线网卡设置</string>
    <string name="page_wifi_checkWifi">无线扫描</string>
    <string name="page_wifi_scanning">正在扫描</string>
    <string name="page_wifi_is_scanning">正在扫描，请稍等。。。</string>
    <string name="page_wifi_close">wifi未打开</string>
    <string name="component_switchbutton_on">打开</string>
    <string name="component_switchbutton_off">关闭</string>
    <string name="dialog_password">密码：</string>
    <string name="dialog_password_cannot_null">密码不能为空</string>
    <string name="dialog_show_password">显示密码</string>
    <string name="dialog_txt_ok">确定</string>
    <string name="dialog_txt_cancel">取消</string>
    <string name="wifi_wps_available_first_item" msgid="3538912605343585226">"受保护的网络可用"</string>
    <string name="wifi_wps_available_second_item" msgid="6121307881706347616">" （受保护的网络可用）"</string>
    <string name="wifi_secured_first_item" msgid="4072076186051083451">"通过<xliff:g id="WIFI_SECURITY_SHORT">%1$s</xliff:g>进行保护"</string>
    <string name="wifi_secured_second_item" msgid="1326000076939056265">"，通过<xliff:g id="WIFI_SECURITY_SHORT">%1$s</xliff:g>进行保护"</string>
    <string name="wifi_security_none" msgid="7985461072596594400">"无"</string>
    <string name="wifi_disabled_password_failure" msgid="8659805351763133575">"身份验证出现问题"</string>
    <string name="wifi_disabled_network_failure" msgid="3111321240793227690">"已停用状况不佳的互联网连接"</string>
    <string name="wifi_disabled_generic" msgid="4259794910584943386">"已停用"</string>
    <string name="wifi_remembered" msgid="4955746899347821096">"已保存"</string>
    <string name="wifi_starting" msgid="6716593470710880000">"正在打开 Wi-Fi&#8230;"</string>
    <string name="wifi_stopping" msgid="244864762599017659">"正在关闭 Wi-Fi&#8230;"</string>
    <string name="wifi_fail_to_scan" msgid="1265540342578081461">"扫描不到网络"</string>
    <string name="wifi_not_in_range" msgid="1136191511238508967">"不在范围内"</string>
    <string name="wifi_wps_overlap_error" msgid="3352261777053283320">"检测到另一个 Wi-Fi 保护会话。请过几分钟后重试。"</string>
    <string name="wifi_wps_setup_title" msgid="2301524571580808871">"WPS 设置"</string>
    <string name="wifi_wps_failed" msgid="1648418410092969300">"无法启动 WPS，请重试。"</string>
    <string name="wifi_wps_in_progress" msgid="2776555137392461525">"正在进行 WPS，这一过程可能需要数十秒的时间"</string>
    <string name="wifi_wps_pin_output" msgid="7773693032190962123">"键入接入点上的 PIN <xliff:g id="WPS_PIN">%1$s</xliff:g>"</string>
    <string name="wifi_security_short_wep">WEP</string>
    <string name="wifi_security_short_wpa">WPA</string>
    <string name="wifi_security_short_wpa2">WPA2</string>
    <string name="wifi_security_short_wpa_wpa2">WPA/WPA2</string>
    <string name="wifi_security_short_psk_generic">@string/wifi_security_short_wpa_wpa2</string>
    <string name="wifi_security_short_eap">802.1x</string>
    <string name="wifi_security_wep">WEP</string>
    <string name="wifi_security_wpa">WPA PSK</string>
    <string name="wifi_security_wpa2">WPA2 PSK</string>
    <string name="wifi_security_wpa_wpa2">WPA/WPA2 PSK</string>
    <string name="wifi_security_psk_generic">@string/wifi_security_wpa_wpa2</string>
    <string name="wifi_security_eap">802.1x EAP</string>
    <string name="page_wifi_hotspot_select">便携式Wi-Fi热点</string>
    <string name="page_wifi_hotspot_settings">配置</string>
    <string name="page_wifi_hotspot_ssid">网络SSID</string>
    <string name="page_wifi_hotspot_security">安全性</string>
    <string name="page_wifi_hotspot_password">密码</string>
    <string name="page_wifi_hotspot_pwdInstruction">密码至少应包含8个字符。</string>
    <string name="page_wifi_hotspot_showPwd">显示密码</string>
    <string name="page_wifi_hotspot_ok">确定</string>
    <string name="page_wifi_hotspot_cancel">取消</string>
    <string name="page_wifi_hotspot_validation">请填写完整。</string>
    <string name="page_wifi_hotspot_ssid_validation">请输入有效的SSID。</string>
    <string name="page_wifi_hotspot_pwd_validation">请输入有效的密码。</string>
    <string name="page_wifi_hotspot_settingsOk">Wi-Fi热点设置完成。</string>
    <string name="page_wifi_hotspot_settingsFailed">Wi-Fi热点设置失败。</string>
    <string name="page_wifi_hotspot_AndroidAp">AndroidAp</string>
    <string name="page_wifi_hotspot_AndroidAp_pwd">12345678</string>
    <string name="wifi_tether_starting" msgid="1322237938998639724">"正在打开热点..."</string>
    <string name="wifi_tether_stopping" msgid="4835852171686388107">"正在关闭热点..."</string>
    <string name="wifi_error" msgid="3207971103917128179">"出错"</string>
    <string name="wifi_tether_enabled_subtext" msgid="8948641212931906143">"便携式热点 <xliff:g id="NETWORK_SSID">%1$s</xliff:g> 已启用"</string>
    <string name="wifi_tether_failed_subtext" msgid="2654888578056042315">"便携式 Wi-Fi 热点错误"</string>
    <string name="wifi_tether_configure_ap_text" msgid="61237027772641155">"设置 Wi-Fi 热点"</string>
    <string name="wifi_tether_configure_subtext" msgid="1927454307836232128">"<xliff:g id="NETWORK_SSID">%1$s</xliff:g> <xliff:g id="NETWORK_SECURITY">%2$s</xliff:g> 便携式 Wi-Fi 热点"</string>
    <string name="wifi_tether_configure_ssid_default" msgid="8467525402622138547">"Android 热点"</string>
    <string name="page_audio_output">Dolby Digital Plus 音频输出：</string>
    <string name="page_audio_HDMI">HDMI：</string>
    <string name="page_audio_SPDIF">SPDIF：</string>
    <string name="page_audio_passThrought">Passthrought</string>
    <string name="page_audio_rawPcm">"Raw Pcm"</string>
    <string name="page_audio_instruction">音频设置制作音量设置，即多媒体音量（闹铃和按键音不涉及），通过遥控器上左右按键加大和减小音量</string>
    <string name="page_audio_btnSetting">设置</string>
    <string name="button_text_yes">是</string>
    <string name="button_text_no">否</string>
    <string name="button_text_ok">确定</string>
    <string name="button_text_cancel">取消</string>
    <string name="page_vedio_HDMI">HDMI：</string>
    <string name="page_vedio_HDMI_1">720p/50Hz</string>
    <string name="page_vedio_HDMI_2">720p/60Hz</string>
    <string name="page_vedio_HDMI_3">1080i/50Hz</string>
    <string name="page_vedio_HDMI_4">1080i/60Hz</string>
    <string name="page_vedio_HDMI_5">1080p/50Hz</string>
    <string name="page_vedio_HDMI_6">1080p/60Hz</string>
    <string name="display_resolution">分辨率</string>
    <string name="display_position">重显率</string>
    <string name="display_position_summary">设置您的电视重显率</string>
    <string name="cvbs_output_mode">双输出模式</string>
    <string name="cvbs_output_mode_summary">设置您的双输出模式</string>
    <string name="position_help">帮助： \n1.按确认键切换放大/缩小； \n2.按方向键调整屏幕四个边的位置； \n3.按返回键保存并退出； \n4.调整结果将在重启后生效； \n5.按菜单键设置默认重显率。</string>
    <string name="position_help_noreboot">帮助： \n1.按确认键切换放大/缩小； \n2.按方向键调整屏幕四个边的位置； \n3.按返回键保存； \n4.按菜单键设置默认重显率。</string>
    <string name="display_position_dialog_title">&quot;注意&quot;</string>
    <string name="display_position_set_confirm_dialog">&quot;重显率已设置。确认保存并重启？&quot;</string>
    <string name="display_position_set_confirm_dialog_noreboot">&quot;重显率已设置。确认保存？&quot;</string>
    <string name="display_position_set_default_confirm_dialog">&quot;重显率已设置成默认值。确认保存并重启？&quot;</string>
    <string name="display_position_set_default_confirm_dialog_noreboot">&quot;重显率已设置成默认值。确认保存？&quot;</string>
    <string name="tv_output_mode">&quot;输出模式&quot;</string>
    <string name="tv_output_mode_summary">&quot;设置您的电视输出模式。&quot;</string>
    <string name="tv_output_mode_dialog_title">"注意"</string>
    <string name="tv_output_mode_dialog_notes">"显示模式已设置。你确认保存？如果你不操作,这将在15秒内恢复。"</string>
    <string name="tv_default_frequency">默认高清制式刷新频率</string>
    <string name="tv_default_frequency_summary">60Hz</string>
    <string name="page_showAdjust_text">电视屏幕边缘的文字、图像显示不完全时，您可以使用“显示区域调整”，调整页面显示的位置，方向键上、下、左、右微调，使屏幕居中显示。</string>
    <string name="page_showAdjust_button_text">显示区域调整</string>
    <string name="screen_tips_01"> 如果你的电视画面无法被完整显示，请使用“上”“下”键调节缩放比例，直到底图区域被移除到屏幕外。按“确定”键应用设置并返回。按“返回”键不设置并返回。</string>
    <string name="page_sysUpgrade_title">系统升级</string>
    <string name="page_sysUpgrade_isChecking">正在检测新版本...</string>
    <string name="page_sysUpgrade_download_percent">正在下载升级文件... %1$s</string>
    <string name="page_sysUpgrade_download_failed">升级文件下载失败</string>
    <string name="page_sysUpgrade_file_invalid">非法的升级文件</string>
    <string name="page_sysUpgrade_neednot_upgrade">当前已为最新版本</string>
    <string name="page_sysUpgrade_need_upgrade">检测到最新版本，可以进行系统升级</string>
    <string name="page_sysUpgrade_check_upgrade_failed">未检测到新版本</string>
    <string name="page_sysUpgrade_check_upgrade_failed_byNetwork">当前网络连接失败，请检查网络！</string>
    <string name="page_sysUpgrade_local_upgrade">本地升级</string>
</resources>