<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/wried_settings_container"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:gravity="center"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/wried_settings_internet_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
	    android:layout_gravity="center"
	    android:textSize="@dimen/gl_text_size_24sp"
	    android:layout_marginBottom="50dp"
	    android:textColor="@color/text_white"
        android:text="@string/page_wired_internet_style" />

    <RadioGroup
        android:id="@+id/wired_settings_rg_getStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:layout_gravity="center"
        android:orientation="vertical" >

        <RadioButton
            android:id="@+id/wired_settings_rb_autoGet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:textSize="@dimen/gl_text_size_22sp"
            android:textColor="@color/text_white"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:text="@string/page_wired_autoGet" />
        <RadioButton
            android:id="@+id/wired_settings_rb_manualSet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/gl_text_size_22sp"
            android:textColor="@color/text_white"
            android:text="@string/page_wired_manualSet" />
    </RadioGroup>
    
    <Button 
        android:id="@+id/wired_settings_btn_begin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:textColor="@color/text_white"
        android:background="@drawable/eth_button_bg"
        android:textSize="@dimen/gl_text_size_22sp"
        android:text="@string/page_wired_begin"/>
    
    <TextView 
        android:id="@+id/wired_settings_txtCheck"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/text_white"
        android:textSize="@dimen/gl_text_size_20sp"
        android:text="@string/page_wired_check"/>

</LinearLayout>