<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:gravity="center"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/audio_settings_output"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:text="@string/page_audio_output"
        android:textColor="@color/text_white"
        android:textSize="@dimen/gl_text_size_24sp" />

    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <TableRow
            android:layout_margin="15dp"
            android:gravity="center" >

            <TextView
                android:id="@+id/audio_settings_HDMI"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/page_audio_HDMI"
                android:textColor="@color/text_white"
                android:textSize="@dimen/gl_text_size_24sp" />

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <RadioButton
                    android:id="@+id/audio_settings_HDMI_passThrought"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/page_audio_passThrought"
                    android:textColor="@color/text_white"
                    android:textSize="@dimen/gl_text_size_24sp" />

                <RadioButton
                    android:id="@+id/audio_settings_HDMI_rawPcm"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="@string/page_audio_rawPcm"
                    android:textColor="@color/text_white"
                    android:textSize="@dimen/gl_text_size_24sp" />
            </RadioGroup>
        </TableRow>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="?android:attr/listDivider" />

        <TableRow
            android:layout_marginBottom="20dp"
            android:gravity="center" >

            <TextView
                android:id="@+id/audio_settings_SPDIF"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/page_audio_SPDIF"
                android:textColor="@color/text_white"
                android:textSize="@dimen/gl_text_size_24sp" />

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <RadioButton
                    android:id="@+id/audio_settings_SPDIF_passThrought"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/page_audio_passThrought"
                    android:textColor="@color/text_white"
                    android:textSize="@dimen/gl_text_size_24sp" />

                <RadioButton
                    android:id="@+id/audio_settings_SPDIF_rawPcm"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="@string/page_audio_rawPcm"
                    android:textColor="@color/text_white"
                    android:textSize="@dimen/gl_text_size_24sp" />
            </RadioGroup>
        </TableRow>
    </TableLayout>

    <TextView
        android:layout_width="600dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:lineSpacingMultiplier="1.5"
        android:singleLine="false"
        android:text="@string/page_audio_instruction"
        android:textColor="@color/text_white"
        android:textSize="@dimen/gl_text_size_22sp" />

    <Button
        android:id="@+id/audio_settings_btnSet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/page_audio_btnSetting"
        android:background="@drawable/eth_button_bg"
        android:textColor="@color/text_white"
        android:textSize="@dimen/gl_text_size_24sp" />

</LinearLayout>