<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/view_background" >

    <LinearLayout
        android:layout_width="494dp"
        android:layout_height="364dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="200dp"
        android:background="@drawable/bg_white"
        android:orientation="vertical"
        android:paddingLeft="40dp"
        android:paddingRight="40dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="54dp"
            android:gravity="left|center_vertical"
            android:text="@string/network_status_title"
            android:textColor="#000000"
            android:textSize="22sp" />

        <TextView
            android:id="@+id/state_view"
            android:layout_width="wrap_content"
            android:layout_height="54dp"
            android:layout_marginTop="12dp"
            android:gravity="left|center_vertical"
            android:text="@string/network_status_waiting"
            android:textColor="#000000"
            android:textSize="22sp" />

        <Space
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/prevbutton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="40dp"
                android:background="@drawable/eth_button_bg"
                android:nextFocusDown="@+id/cable_check_button"
                android:text="@string/button_text_previous" />

            <Space
                android:layout_width="80dp"
                android:layout_height="0dp" />

            <Button
                android:id="@+id/okbutton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="40dp"
                android:background="@drawable/eth_button_bg"
                android:nextFocusDown="@+id/cable_check_button"
                android:text="@string/button_text_finish" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>