<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:id="@+id/network_wifi_dynamicPanel"
        android:layout_width="494dp"
        android:layout_height="569dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="120dp"
        android:orientation="vertical"
        android:paddingLeft="40dp"
        android:paddingRight="40dp" >

        <RadioGroup
            android:id="@+id/network_wifi_radiogroup"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="60dp"
            android:layout_marginTop="120dp"
            android:orientation="vertical"
            android:paddingLeft="40dp"
            android:paddingRight="40dp" >

            <RadioButton
                android:id="@+id/network_wifi_hotspot"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:checked="true"
                android:nextFocusDown="@+id/network_wifi_scan"
                android:nextFocusUp="@+id/network_wifi_btn_next"
                android:nextFocusLeft="@+id/settings_wifi"
                android:text="@string/network_wifi_setup_2"
                android:textColor="@color/text_white"
                android:textSize="@dimen/gl_text_size_24sp" />

            <RadioButton
                android:id="@+id/network_wifi_scan"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:nextFocusDown="@+id/network_wifi_btn_next"
                android:nextFocusUp="@+id/network_wifi_hotspot"
                android:nextFocusLeft="@+id/settings_wifi"
                android:text="@string/network_wifi_setup_1"
                android:textColor="@color/text_white"
                android:textSize="@dimen/gl_text_size_24sp" />
        </RadioGroup>

        <Button
            android:id="@+id/network_wifi_btn_next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/eth_button_bg"
            android:nextFocusDown="@+id/network_wifi_hotspot"
          	android:nextFocusLeft="@+id/settings_wifi"
            android:nextFocusUp="@+id/network_wifi_scan"
            android:text="@string/button_text_next"
            android:textColor="@color/text_white"
            android:textSize="@dimen/gl_text_size_22sp" />
    </LinearLayout>

</RelativeLayout>